# chainer-pose-proposal-net

./: .gitignore  CMakeLists.txt  Makefile  call_cuda.py  clip_tracker.py  coco_dataset.py  config.ini  high_speed.py  human_plot.py  img_test.py  package.xml  predict.py  skeleton_box_pub.py  skeleton_draw.py  skeleton_predict.py  skeleton_pub.py  skeleton_pub_zed.py  skeleton_record.py  skeleton_viz.py  skeleton_viz2.py  ssd.cu  top_tracking.py  zed.py
launch/: ppn.launch  skeleton.rviz
msg/: Bbox.msg  Skeleton.msg
skeleton_optimizer/: CMakeLists.txt  Makefile  main.cpp  optimizer.cpp  optimizer.h
vrep_sim/: path.lua  path.ttt  path2.ttt
